Changed the layout to make an adjustable side panel and added an adjustable output panel - Changed index.html and override.css to implement the container-split and split classes - Added buttons to index.html and handlers to main.js to collapse the left-sidebar and output-panels - Used the Split.js library to implement splitters (https://github.com/nathancahill/Split.js) - Resolves: issue #20 - Resolves: issue #21

--- a/root/css/override.css
+++ b/root/css/override.css
@@ -3,52 +3,16 @@ Copyright (c) 2016, Bruce Schubert.
 The Modified BSD License (3-clause license)
 */
 body {
-    padding-top: 50px;
+    /*padding-top: 50px;*/
     /* Move the content down because we have a fixed navbar that is 50px tall */
 }
 
-@media (min-width: 768px) {
-    .sidebar-left {
-        position: fixed;
-        top: 51px;
-        bottom: 0;
-        left: 0;
-        z-index: 1000;
-        display: block;
-        padding-top: 0px;
-        padding-left: 20px;
-        padding-right: 20px;
-        padding-bottom: 20px;
-        overflow-x: hidden;
-        overflow-y: auto;
-        border-right: 1px solid #eee;
-    }
-}
-
-@media (max-width: 767px) {
-    .section-heading .section-toggle:after {
-        font-family: 'Glyphicons Halflings';
-        content: "\e114";
-        float: none;
-        color: lightgrey;
-        /* symbol for opening sections */
-    }
-
-    .section-heading .section-toggle.collapsed:after {
-        content: "\e080";
-        /* symbol for closing sections */
-    }
-
-    a.section-toggle {
-        text-decoration: none;
-    }
-}
-
-@media (min-width: 768px) {
-    .section-heading .section-toggle:after {
-        padding-left: 20px;
-        padding-right: 20px;
-    }
+.container-split {
+    /*maximum size, excluding the nav-bar*/
+    position: fixed;
+    top: 54px;
+    height: calc(100vh - 54px);
+    width: 100vw;
 }
 
 .container-full {
@@ -58,6 +22,29 @@ body {
     min-height:100%;
 }
 
+.globe-button {
+    background:rgba(255,255,255,0.3);
+}
+/*.globe-button:hover {
+    background: rgba(255,255,255,0.7);
+    color:rgba(255,255,255,0.8);
+}*/
+
+#globe {
+    overflow: hidden;
+}
+
+#globe canvas {
+    top: 0;
+    left: 0;
+    z-index: 0 !important;
+    width: 100%;
+    height: 100%;
+    padding-left: 0;
+    padding-right: 0;
+    background-color: rgb(0,0,0);
+    /*border:1px solid #000000;*/
+}
 
 /* Controls the style of enabled and disabled layers */
 .layer-name {
@@ -77,7 +64,7 @@ body {
     padding-bottom: 15px;
 }
 
-.non-interactive { 
+.non-interactive {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -109,6 +96,39 @@ body {
 .section-heading {
 }
 
+/*split window container class*/
+.split {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+.gutter {
+    background-color: #aaa;
+    background-repeat: no-repeat;
+    background-position: 50%;
+}
+
+.gutter.gutter-horizontal {
+    background-image: url('images/grips/vertical.png');
+    cursor: ew-resize;
+}
+
+.gutter.gutter-vertical {
+    background-image: url('images/grips/horizontal.png');
+    cursor: ns-resize;
+}
+
+.split.split-horizontal, .gutter.gutter-horizontal {
+    height: 100%;
+    float: left;
+}
+.split.split-vertical {
+}
+
 .sub-header {
     padding-bottom: 10px;
     border-bottom: 1px solid #eee;
@@ -129,12 +149,12 @@ body {
 }
 
 
-#canvas-wrap canvas { 
+#canvas-wrap canvas {
     position: relative;
     top: 0;
-    left: 0; 
-    z-index: 0 !important; 
-    width: 100%; 
+    left: 0;
+    z-index: 0 !important;
+    width: 100%;
     height: 100%;
     padding-left: 0;
     padding-right: 0
@@ -143,13 +163,13 @@ body {
 
 #timeControlButtons {
     position: absolute;  /*sets it's position relative to the document instead of the container. Allows the bottom property to be used to force the element to the bottom of the view.  */
-    bottom: 35px;   
-    left: calc(50% - 98px); 
+    bottom: 35px;
+    left: calc(50% - 98px);
 }
 
 #timeControlSlider {
     position: absolute;  /*sets it's position relative to the document instead of the container. Allows the bottom property to be used to force the element to the bottom of the view.  */
-    bottom: 20px;   
+    bottom: 20px;
     left: calc(50% - 98px);
 }
 
@@ -157,4 +177,59 @@ body {
     background:#3e444c;
     top:3px;
 }
+
+
+/*Desktop or laptop*/
+@media (min-width: 768px) {
+    /*desktop sidebar*/
+    .sidebar-left {
+        position: fixed;
+        top: 51px;
+        bottom: 0;
+        left: 0;
+        z-index: 1000;
+        display: block;
+        padding-top: 0px;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-bottom: 20px;
+        overflow-x: hidden;
+        overflow-y: auto;
+        border-right: 1px solid #eee;
+    }
+    .main {
+        top: 51px;
+        position: fixed;
+        height: calc(100vh - 51px);
+    }
+    .section-heading .section-toggle:after {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
+
+/*Mobile phone or table*/
+@media (max-width: 767px) {
+    .main {
+        height: calc(100vh - 71px);
+    }
+    /* symbol for opening sections */
+    /*.section-heading .section-toggle:after {*/
+        /*font-family: 'Glyphicons Halflings';*/
+        /*content: "\e114";*/
+        /*float: none;*/
+        /*color: lightgrey;*/
+    /*}*/
+
+    /* symbol for closing sections */
+    /*.section-heading .section-toggle.collapsed:after {*/
+        /*content: "\e080";*/
+    /*}*/
+
+    a.section-toggle {
+        text-decoration: none;
+    }
+}
+
+
 
